# MessageFirst

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client.c  environment.yml  messagefirst.c  messagefirst_api.c  requirements.txt  server.c  spec-file.txt
.github/workflows/: cmake.yml
benchmarks/: CMakeLists.txt  make_plots.py  plot_comparison_graphs.py  run_benchmarks.py
benchmarks/comparison/: plot_comparison_graph.py  plot_comparison_graphs.py  plot_overhead.py  utils.py
benchmarks/echo-benchmark/: client.c  run_benchmark.py  server.c
benchmarks/echo-benchmark-multi-thread/: client.c  server.c
benchmarks/echo_benchmark/: benchmark_echo.py  plot.py  run_benchmark_echo.py  server.c  utils.py
benchmarks/netperf-stream-rr/: parse_netperf.py
benchmarks/netperf_stream_rr/: benchmark_netperf.py  calc_overhead.py  parse_netperf.py  plot.py  run_benchmark_netperf.py
benchmarks/util/: calc_overhead.py  utils.py
examples/: CMakeLists.txt
examples/echo-server/: client.c  server.c
include/: messagefirst.h  messagefirst_api.h  util.h
src/: CMakeLists.txt  messagefirst.c  messagefirst_api.c  messagefirst_api_poll.c  messagefirst_api_send.c  thread_pool.c
src/include/: messagefirst.h  messagefirst_api.h  thread_pool.h  util.h
test/: CMakeLists.txt  test.py
test/echo-test/: client.c  server.c
